mb  nt